--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "jquery": "^3.1.0",
     "morgan": "^1.7.0",
     "pug": "^2.0.0-beta6"
+  },
+  "devDependencies": {
+    "eslint": "^3.14.1"
   }
 }
