--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A website that lets the user check whether a given natural number is prime",
   "main": "index.js",
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
